@@ -131,5 +131,6 @@ If you get stuck, you can ask for help in the Plugin Forum.
 = 8.1.0 - xxxx-xx-xx =
 * Fix - PHP 8.2 deprecation warnings within the WC_Stripe_UPE_Payment_Method class.
 * Fix - Resolved an issue with saving plugin settings when bank descriptor value is invalid.
+* Add - Include Stripe API version in logs.
 
 [See changelog for all versions](https://raw.githubusercontent.com/woocommerce/woocommerce-gateway-stripe/trunk/changelog.txt).
